# dgkit

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CLAUDE.md  README.md  commands.md  justfile  notes.md  profile.py  pyproject.toml  recommendations.md  recommendations2.md  setup.py
.github/: dependabot.yml
.github/workflows/: qa.yml  release.yml  wheels.yml
benchmarks/: README.md  run.py  run.sh  setup.py  setup.sh
docs/agent/: architecture.md  automated-tests.md  benchmarking.md  coding-style.md  communication-style.md  decision-log.md  development.md  project-philosophy.md  repository-structure.md  tech-stack.md
docs/agent/decisions/: 0000-template.md  0001-csv-writer.md  0002-parser-performance-optimizations.md  0003-pipeline-concurrency-architecture.md  0004-parser-performance-optimization.md
docs/user/assets/: demo.tape
src/dgkit/: benchmark.py  cli.py  core.py  filters.py  models.py  parsers.py  pipeline.py  readers.py  sampler.py  summary.py  types.py  validation.py  writers.py
src/dgkit/sql/postgresql/: .sqlfluff
src/dgkit/sql/postgresql/indices/: masterrelease.sql
src/dgkit/sql/postgresql/tables/: artist.sql  label.sql  masterrelease.sql  release.sql
src/dgkit/sql/sqlite/indices/: artist.sql  artistalias.sql  label.sql  masterrelease.sql  release.sql
src/dgkit/sql/sqlite/tables/: artist.sql  artist_alias.sql  artist_group.sql  artist_member.sql  artistalias.sql  label.sql  label_sublabel.sql  masterrelease.sql  masterrelease_artist.sql  masterrelease_genre.sql  masterrelease_style.sql  masterrelease_video.sql  release.sql  release_artist.sql  release_company.sql  release_extra_artist.sql  release_extraartist.sql  release_format.sql  release_genre.sql  release_identifier.sql  release_label.sql  release_series.sql  release_style.sql  release_track.sql  release_video.sql
tests/: conftest.py
tests/fixtures/: sample_artists.xml  sample_labels.xml
tests/integration/: test_cli.py  test_postgresql.py  test_sample.py
tests/unit/: test_filters.py  test_parsers.py  test_pipeline.py  test_validation.py  test_writers.py
