[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9.18,<0.10" ]

[project]
name = "dgkit"
version = "0.1.0"
description = "Discogs Toolkit"
readme = "README.md"
authors = [ { name = "Jean-Marc Fontaine", email = "jm@jmfontaine.net" } ]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "lxml>=6.0.2",
  "psycopg[binary]>=3.3.2",
  "pyparsing>=3.3.1",
  "typer>=0.21",
]

scripts.dgkit = "dgkit.cli:app"

[dependency-groups]
dev = [
  "pyproject-fmt>=2.11.1",
  "pytest>=8",
  "pytest-cov>=6",
  "ruff>=0.14.10",
  "sqlfluff>=3.5",
]
test = [
  "testcontainers[postgres]>=4.13.3",
]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
addopts = "-v"
filterwarnings = [
  # KLUDGE: testcontainers internal deprecation - https://github.com/testcontainers/testcontainers-python/issues/726
  "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning",
]

[tool.coverage.run]
source = [ "dgkit" ]

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "if TYPE_CHECKING:" ]
