[build-system]
build-backend = "setuptools.build_meta"
requires = [ "mypy>=1.0", "setuptools>=61" ]

[project]
name = "dgkit"
version = "0.1.0"
description = "Discogs Toolkit"
readme = "README.md"
authors = [ { name = "Jean-Marc Fontaine", email = "jm@jmfontaine.net" } ]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "lxml>=6.0.2",
  "psycopg[binary]>=3.3.2",
  "pyparsing>=3.3.1",
  "typer>=0.21",
]

scripts.dgkit = "dgkit.cli:app"

[dependency-groups]
dev = [
  "build>=1.3.0",
  "cogapp>=3.4.1",
  "lxml-stubs>=0.5.1",
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "py-spy>=0.4.1",
  "pyproject-fmt>=2.11.1",
  "pytest>=8",
  "pytest-cov>=6",
  "ruff>=0.14.10",
  "setuptools>=80.9.0",
  "sqlfluff>=3.5",
  "testcontainers[postgres]>=4.13.3",
  "ty>=0.0.8",
]

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.cibuildwheel]
# Build wheels for common platforms
build = [
  "cp311-*",
  "cp312-*",
  "cp313-*",
  "cp314-*",
]
skip = [
  "*-musllinux_*", # Skip musl for now (Alpine)
  "*-win32",       # Skip 32-bit Windows
  "*_i686",        # Skip 32-bit Linux
]

# Use setuptools for wheel builds (enables mypyc compilation)
build-frontend = "build"

# Install build dependencies before building
before-build = "pip install mypy setuptools"

# Test the wheel after building
test-command = "python -c \"from dgkit.parsers import ReleaseParser; print('Import OK')\""

[tool.cibuildwheel.linux]
archs = [ "x86_64", "aarch64" ]

[tool.cibuildwheel.macos]
archs = [ "x86_64", "arm64" ]

[tool.cibuildwheel.windows]
archs = [ "AMD64" ]

[tool.pyproject-fmt]
column_width = 88
keep_full_version = true

[tool.pytest.ini_options]
testpaths = [ "tests" ]
addopts = "-v"
filterwarnings = [
  # KLUDGE: testcontainers internal deprecation
  # See: https://github.com/testcontainers/testcontainers-python/issues/726
  "ignore:The @wait_container_is_ready decorator is deprecated:DeprecationWarning",
]

[tool.coverage.run]
source = [ "dgkit" ]

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", "if TYPE_CHECKING:" ]
